# cpp-fpga

./: CMakeLists.txt
app/: autograd.cc  main.cc
include/: line_exception.h  xilinx_ocl_helper.h
lib/: event_timer.cc  xilinx_ocl_helper.cc
